# flowfull-rust-starter

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  nixpacks.toml
docs/: ARCHITECTURE.md  BRIDGE_VALIDATION.md  CONFIGURATION.md  DEPLOYMENT.md  ROUTES.md
examples/: generate_trust_token_key.rs
scripts/: generate-trust-token-key.ps1
src/: lib.rs  main.rs  security.rs
src/auth/: bridge_validator.rs  middleware.rs  mod.rs  types.rs
src/cache/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/routes/: api.rs  health.rs  mod.rs
src/tokens/: mod.rs
tests/: starter.rs
